; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_join_partial_arrays.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_join_partial_arrays.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@IS_ARRAY = common dso_local global i64 0, align 8
@FAILURE = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @join_partial_arrays to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @join_partial_arrays(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i64 @Z_TYPE_P(i32* %7)
  %9 = load i64, i64* @IS_ARRAY, align 8
  %10 = icmp ne i64 %8, %9
  br i1 %10, label %11, label %15

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @IS_PARTIAL_ARRAY(i32* %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %24

15:                                               ; preds = %11, %2
  %16 = load i32*, i32** %5, align 8
  %17 = call i64 @Z_TYPE_P(i32* %16)
  %18 = load i64, i64* @IS_ARRAY, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %20, label %26

20:                                               ; preds = %15
  %21 = load i32*, i32** %5, align 8
  %22 = call i32 @IS_PARTIAL_ARRAY(i32* %21)
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %26, label %24

24:                                               ; preds = %20, %11
  %25 = load i32, i32* @FAILURE, align 4
  store i32 %25, i32* %3, align 4
  br label %40

26:                                               ; preds = %20, %15
  %27 = call i32 @empty_partial_array(i32* %6)
  %28 = load i32, i32* %6, align 4
  %29 = call i32 @Z_ARRVAL(i32 %28)
  %30 = load i32*, i32** %4, align 8
  %31 = call i32 @Z_ARRVAL_P(i32* %30)
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 @Z_ARRVAL_P(i32* %32)
  %34 = call i32 @join_hash_tables(i32 %29, i32 %31, i32 %33)
  %35 = load i32*, i32** %4, align 8
  %36 = call i32 @zval_ptr_dtor_nogc(i32* %35)
  %37 = load i32*, i32** %4, align 8
  %38 = call i32 @ZVAL_COPY_VALUE(i32* %37, i32* %6)
  %39 = load i32, i32* @SUCCESS, align 4
  store i32 %39, i32* %3, align 4
  br label %40

40:                                               ; preds = %26, %24
  %41 = load i32, i32* %3, align 4
  ret i32 %41
}

declare dso_local i64 @Z_TYPE_P(i32*) #1

declare dso_local i32 @IS_PARTIAL_ARRAY(i32*) #1

declare dso_local i32 @empty_partial_array(i32*) #1

declare dso_local i32 @join_hash_tables(i32, i32, i32) #1

declare dso_local i32 @Z_ARRVAL(i32) #1

declare dso_local i32 @Z_ARRVAL_P(i32*) #1

declare dso_local i32 @zval_ptr_dtor_nogc(i32*) #1

declare dso_local i32 @ZVAL_COPY_VALUE(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
